tests/fixtures/negative/56_vec_index_oob_abort.yc
fn main() {
    values := Vec<i32>{}
    values.push(10)
    println(values[1])
}
